--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,5 +1,11 @@
 :root {
-    --white: #FFF;
-    --black: #000;
-    --bg: #fff;
+    --white: #FFFFFF;
+    --black: #2E2D2D;
+    --grey: #A7A7A7;
+    --grey2: #EFEFEF;
+    --brown: #857067;
+    --brown2: #353434;
+    --green: #179860;
+
+    --bg: #F9F9F9;
 }
