--- a/app/components/header.html
+++ b/app/components/header.html
@@ -13,21 +13,70 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="container">
 
-        <div class="topbar">
-          <div class="container">
-            <div class="topbar__inner">
+      <div class="topbar">
+        <div class="container">
+          <div class="topbar__inner">
+            <h6 class="menu-2">Будние дни с 8 до 21 часа. Выходные с 10 до 18 часов</h6>
 
+            <div class="topbar__item">
+              <a class="topbar__link menu-2" href="mailto:info@dsk-vira.ru">info@dsk-vira.ru</a>
+              <h6 class="menu-2">Москва, 2-й Котельнический переулок 3</h6>
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="head">
         <div class="container">
-          <div class="header__inner">
-
+          <div class="head__inner">
+            <div class="head__logo">
+              <a class="head__logo-link" href="#!">
+                <img class="head__logo-img" src="../images/logo.svg" alt="logo">
+              </a>
+              <div class="head__logo-item">
+                <h4 class="head__logo-title">Экологичные</h4>
+                <h6 class="menu-1">каркасные дома в Москве и МО</h6>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
+
+      <div class="menu">
+        <div class="container">
+          <div class="menu__inner">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Проекты</a>
+              </li>
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Услуги</a>
+              </li>
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Наши работы</a>
+              </li>
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">О компании</a>
+              </li>
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Вопрос-ответ</a>
+              </li>
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Контакты</a>
+              </li>
+            </ul>
+
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Поиск</a>
+              </li>
+              <li class="menu__item">
+                <a href="#!" class="menu__link menu-1">Личный кабинет</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </header>
