--- a/app/components/header.html
+++ b/app/components/header.html
@@ -39,6 +39,36 @@
                 <h6 class="menu-1">каркасные дома в Москве и МО</h6>
               </div>
             </div>
+            <div class="head__item">
+              <span class="small">от</span>
+              <span class="num">48</span>
+              <span class="menu-1">дней</span>
+              <span class="small">до новоселья</span>
+            </div>
+            <div class="head__social">
+              <a class="head__social-link" href="#!">
+                <img class="head__social-img" src="../images/Viber.svg" alt="viber">
+              </a>
+              <a class="head__social-link" href="#!">
+                <img class="head__social-img" src="../images/whatsapp.svg" alt="whatsapp">
+              </a>
+              <a class="head__social-link" href="#!">
+                <img class="head__social-img" src="../images/telegram.svg" alt="telegram">
+              </a>
+            </div>
+            <div class="head__info">
+              <div class="head__info-item">
+                <a class="head__info-link" href="tel:89165562526">
+                  <h4>+7 (916) 556 25 26</h4>
+                </a>
+                <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
+              </div>
+              <div class="head__info-item">
+                <button class="btn-green" type="button">
+                  Заказать звонок
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -69,10 +99,16 @@
 
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">Поиск</a>
+                <a href="#!" class="menu__link menu-1">
+                  <img class="menu__img" src="../images/search.svg" alt="search">
+                  Поиск
+                </a>
               </li>
               <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">Личный кабинет</a>
+                <a href="#!" class="menu__link menu-1">
+                  <img class="menu__img" src="../images/unlock.svg" alt="unlock">
+                  Личный кабинет
+                </a>
               </li>
             </ul>
           </div>
