--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -25,7 +25,7 @@ input,button,textarea{font-family: inherit;}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
 button::-moz-focus-inner {padding: 0;border: 0;}
-a, a:visited{text-decoration: none;color: inherit;}
+a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
