--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -6,6 +6,8 @@
     --brown: #857067;
     --brown2: #353434;
     --green: #179860;
+    --green-hover: #2BAC74;
+    --green-active: #03844C;
 
     --bg: #F9F9F9;
 }
