--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,7 +5,7 @@ html {
 body {
   overflow-x: hidden;
   min-width: 320px;
-  font-family: sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-size: 14px;
   color: var(--black, #2E2D2D);
   background: var(--white, #fff);
@@ -98,4 +98,67 @@ p {
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
+}
+
+.num {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%;
+}
+
+.btn-green {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 50px;
+  padding: 0 24px;
+  color: var(--white, #fff);
+  border-radius: 8px;
+  background: var(--green, #179860);
+  transition: all 0.2s ease-out;
+
+  &:hover {
+    background: var(--green-hover, #2BAC74);
+  }
+
+  &:active {
+    background: var(--green-active, #03844C);
+  }
+
+  &:disabled {
+    color: var(--grey2, #EFEFEF);
+    background: var(--grey, #A7A7A7);
+  }
+}
+
+.btn-white {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 50px;
+  padding: 0 24px;
+  color: var(--black, #2E2D2D);
+  border-radius: 8px;
+  background: var(--white, #fff);
+}
+
+.btn-grey {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 50px;
+  padding: 0 24px;
+  color: var(--black, #2E2D2D);
+  border-radius: 8px;
+  background: var(--bg, #F9F9F9);
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background: var(--grey2, #EFEFEF);
 }
