--- a/app/scss/elements/footer.scss
+++ b/app/scss/elements/footer.scss
@@ -1,1 +1,168 @@
-.footer {}
+.footer {
+  background: var(--bg, #F9F9F9);
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 30px 0;
+  }
+
+  &__top {
+    display: flex;
+    gap: 20px;
+
+    &-body {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
+
+    &-list {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+
+    &-link {
+      color: var(--black, #2E2D2D);
+    }
+
+    &-info {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+  }
+
+  &__logo {
+
+    &-img {
+      width: auto;
+      height: 40px;
+      object-fit: cover;
+    }
+  }
+
+  &__contact {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: flex-end;
+
+    &-link {
+      color: var(--black, #2E2D2D);
+    }
+
+    h6 {
+      color: var(--grey, #A7A7A7);
+    }
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 0 0 0 100px;
+
+    &-block {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      h6 {
+        min-width: 100px;
+        color: var(--green, #179860);
+      }
+    }
+
+    &-list {
+      display: flex;
+      gap: 20px;
+    }
+
+    &-link {
+      color: var(--black, #2E2D2D);
+    }
+  }
+
+  &__info {
+    display: flex;
+    gap: 60px;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+
+      h6 {
+        color: var(--grey, #A7A7A7);
+      }
+    }
+
+    &-link {
+      color: var(--black, #2E2D2D);
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &-link {
+      color: var(--grey, #A7A7A7);
+    }
+  }
+
+  &__social {
+    display: flex;
+    gap: 10px;
+
+    &-link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+      width: 40px;
+      height: 40px;
+      padding: 10px;
+      border-radius: 10px;
+      border: 1px solid var(--grey2, #EFEFEF);
+    }
+
+    span {
+      height: 100%;
+      width: 1px;
+      background: var(--bg, #F9F9F9);
+    }
+  }
+}
+
+.copyright {
+  background: var(--black, #2E2D2D);
+  color: var(--white, #fff);
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0 30px;
+  }
+
+  &__item {
+    display: flex;
+    align-items: flex-end;
+    gap: 18px;
+  }
+
+  &__img {
+    width: auto;
+    height: 30px;
+    object-fit: cover;
+  }
+}
