--- a/app/scss/elements/header.scss
+++ b/app/scss/elements/header.scss
@@ -24,6 +24,7 @@
   }
 
   &__link {
+    color: var(--grey, #A7A7A7);
     text-decoration: none;
   }
 }
@@ -38,22 +39,104 @@
     display: flex;
     align-items: center;
     gap: 30px;
+
+    &-img {
+      width: auto;
+      height: 40px;
+      object-fit: cover;
+    }
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+
+    &-title {
+      color: var(--green, #179860);
+    }
   }
 
-  &__logo-img {
-    width: auto;
-    height: 40px;
-    object-fit: cover;
+  &__item {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: auto;
+    align-items: center;
+    column-gap: 10px;
+
+    span {
+      height: 100%;
+
+      &:nth-child(1) {
+        grid-column: 1/2;
+        grid-row: 2/3;
+      }
+
+      &:nth-child(2) {
+        grid-column: 2/3;
+        grid-row: 1/3;
+        color: var(--brown, #857067);
+      }
+
+      &:nth-child(3) {
+        display: flex;
+        align-items: flex-end;
+        grid-column: 3/4;
+        grid-row: 1/2;
+        color: var(--brown, #857067);
+      }
+
+      &:nth-child(4) {
+        grid-column: 3/4;
+        grid-row: 2/3;
+      }
+
+    }
   }
 
-  &__logo-item {
+  &__social {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    background: var(--bg, #F9F9F9);
+
+    &-link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 30px;
+      height: 30px;
+    }
+
+    &-img {
+      width: 18px;
+      height: auto;
+      object-fit: cover;
+    }
   }
 
-  &__logo-title {
-    color: var(--green, #179860);
+  &__info {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      align-items: flex-end;
+
+      h6 {
+        color: var(--grey, #A7A7A7);
+      }
+    }
+
+    &-link {
+      color: var(--black, #2E2D2D);
+    }
   }
 }
 
@@ -72,5 +155,16 @@
     gap: 20px;
   }
 
-  &__link {}
+  &__link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: var(--black, #2E2D2D);
+  }
+
+  &__img {
+    width: auto;
+    height: 17px;
+    object-fit: cover;
+  }
 }
