build main page

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -169,7 +169,10 @@
   </div>
 </footer>
 </div>
-<script src="js/main.js"></script>
+
+<script src="../libs/jquery-3.7.0.js"></script>
+<script src="../libs/slick.min.js"></script>
+<script defer src="js/main.js"></script>
 </body>
 
 </html>
