--- a/app/components/header.html
+++ b/app/components/header.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vira</title>
 
+  <link rel="stylesheet" href="../libs/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
