--- a/app/css/style.css
+++ b/app/css/style.css
@@ -141,7 +141,7 @@ body {
 }
 
 .container {
-  max-width: 1170px;
+  max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -221,16 +221,22 @@ p {
   line-height: 130%;
 }
 
+.colored-text {
+  color: var(--green, #179860);
+}
+
 .btn-green {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  width: fit-content;
   height: 50px;
   padding: 0 24px;
   color: var(--white, #fff);
   border-radius: 8px;
   background: var(--green, #179860);
+  cursor: pointer;
   transition: all 0.2s ease-out;
 }
 .btn-green:hover {
@@ -249,11 +255,14 @@ p {
   justify-content: center;
   align-items: center;
   text-align: center;
+  width: fit-content;
   height: 50px;
   padding: 0 24px;
   color: var(--black, #2E2D2D);
   border-radius: 8px;
   background: var(--white, #fff);
+  cursor: pointer;
+  transition: all 0.2s ease-out;
 }
 
 .btn-grey {
@@ -261,11 +270,14 @@ p {
   justify-content: center;
   align-items: center;
   text-align: center;
+  width: fit-content;
   height: 50px;
   padding: 0 24px;
   color: var(--black, #2E2D2D);
   border-radius: 8px;
   background: var(--bg, #F9F9F9);
+  cursor: pointer;
+  transition: all 0.2s ease-out;
 }
 
 .line {
@@ -278,6 +290,7 @@ p {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .topbar {
@@ -553,4 +566,284 @@ p {
   width: auto;
   height: 30px;
   object-fit: cover;
+}
+
+.hero {
+  margin-bottom: 100px;
+}
+.hero__inner {
+  padding: 0 60px;
+  min-height: 570px;
+  border-radius: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: drop-shadow(0px 0px 50px rgba(206, 216, 206, 0.2));
+}
+.hero__content {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: var(--white, #fff);
+  max-width: 630px;
+  padding: 0 30px 30px;
+  border-radius: 0 0 30px 30px;
+  position: relative;
+}
+.hero__content::before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: radial-gradient(circle at left bottom, transparent 30px, #fff 30px);
+  position: absolute;
+  top: 0px;
+  left: -30px;
+  z-index: 2;
+}
+.hero__content::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: radial-gradient(circle at right bottom, transparent 30px, #fff 30px);
+  position: absolute;
+  top: 0px;
+  right: -30px;
+  z-index: 2;
+}
+
+.project__head {
+  margin-bottom: 30px;
+}
+.project__title {
+  margin-bottom: 10px;
+}
+.project__suptitle {
+  color: var(--grey, #A7A7A7);
+}
+.project__tab {
+  display: flex;
+  gap: 10px;
+}
+.project__tab-item {
+  display: flex;
+  padding: 20px 40px 15px 40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px 8px 0px 0px;
+  color: var(--grey, #A7A7A7);
+  background: var(--black, #2E2D2D);
+}
+.project__tab-item.active {
+  color: var(--black, #2E2D2D);
+  background: var(--bg, #F9F9F9);
+}
+.project__slider {
+  margin-left: -500px;
+}
+.project__slider-item {
+  padding: 40px 0 100px;
+  background: var(--bg, #F9F9F9);
+}
+.project__slider .slick-list {
+  overflow: visible;
+}
+.project__slider .slick-arrow {
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 70px;
+  height: 180px;
+  background: var(--bg, #F9F9F9);
+  border-radius: 0 30px 30px 0;
+}
+.project__slider .slick-arrow::before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: radial-gradient(circle at right top, transparent 30px, var(--bg, #F9F9F9) 30px);
+  position: absolute;
+  top: -30px;
+  left: 0;
+  z-index: 2;
+}
+.project__slider .slick-arrow::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: radial-gradient(circle at right bottom, transparent 30px, var(--bg, #F9F9F9) 30px);
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  z-index: 2;
+}
+.project__item {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  padding-right: 100px;
+}
+.project__img {
+  width: 1070px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 30px;
+}
+.project__item-body {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 50px 0;
+  max-width: 450px;
+  width: 100%;
+}
+.project__item-head {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.project__list {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+.project__list-img {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+}
+.project__list-item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.project__btns {
+  display: flex;
+  gap: 20px;
+}
+
+.banner {
+  margin-bottom: 100px;
+}
+.banner__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  color: var(--white, #fff);
+  padding: 0 0 0 60px;
+  border-radius: 30px;
+  background-color: var(--green, #03844C);
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+}
+.banner__item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.banner__item:last-child {
+  gap: 20px;
+  padding: 60px 60px 60px 100px;
+  background-color: var(--brown, #857067);
+  position: relative;
+}
+.banner__item-btn {
+  width: 100%;
+}
+.banner__img {
+  width: auto;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  transform: translateX(-50%);
+}
+
+.advantages {
+  margin-bottom: 100px;
+}
+.advantages__title {
+  margin-bottom: 10px;
+}
+.advantages__suptitle {
+  margin-bottom: 40px;
+}
+.advantages__block {
+  display: flex;
+  align-items: center;
+  gap: 130px;
+  margin-bottom: 40px;
+}
+.advantages__block:last-child {
+  margin-bottom: 0;
+}
+.advantages__block:last-child .advantages__img {
+  margin: 0 -375px 0 0;
+}
+.advantages__img {
+  width: auto;
+  height: 600px;
+  object-fit: cover;
+  border-radius: 30px;
+  margin: 0 0 0 -375px;
+}
+.advantages__list {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  max-width: 570px;
+  width: 100%;
+}
+.advantages__item {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.advantages__item-img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+}
+.advantages__item__body {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.payment {
+  padding: 100px 0;
+  background: var(--bg, #F9F9F9);
+  clip-path: polygon(62% 0, 62% 100px, 100% 100px, 100% 100%, 0 100%, 0 0);
+  border-radius: 30px;
+}
+.payment__title {
+  margin-bottom: 10px;
+}
+.payment__suptitle {
+  margin-bottom: 40px;
+}
+.payment__list {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+.payment__item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 25%;
+}
+.payment__item-img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+}
+.payment__item-title {
+  font-weight: 500;
 }
