add script and fixed main page

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vira</title>
 
-  <link rel="stylesheet" href="../libs/slick.css">
+  <link rel="stylesheet" href="libs/slick/slick.css">
+  <link rel="stylesheet" href="libs/noUiSlider/nouislider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -33,7 +34,7 @@
           <div class="head__inner">
             <div class="head__logo">
               <a class="head__logo-link" href="#!">
-                <img class="head__logo-img" src="../images/logo.svg" alt="logo">
+                <img class="head__logo-img" src="images/logo.svg" alt="logo">
               </a>
               <div class="head__logo-item">
                 <h4 class="head__logo-title">Экологичные</h4>
@@ -48,13 +49,13 @@
             </div>
             <div class="head__social">
               <a class="head__social-link" href="#!">
-                <img class="head__social-img" src="../images/Viber.svg" alt="viber">
+                <img class="head__social-img" src="images/Viber.svg" alt="viber">
               </a>
               <a class="head__social-link" href="#!">
-                <img class="head__social-img" src="../images/whatsapp.svg" alt="whatsapp">
+                <img class="head__social-img" src="images/whatsapp.svg" alt="whatsapp">
               </a>
               <a class="head__social-link" href="#!">
-                <img class="head__social-img" src="../images/telegram.svg" alt="telegram">
+                <img class="head__social-img" src="images/telegram.svg" alt="telegram">
               </a>
             </div>
             <div class="head__info">
@@ -101,13 +102,13 @@
             <ul class="menu__list">
               <li class="menu__item">
                 <a href="#!" class="menu__link menu-1">
-                  <img class="menu__img" src="../images/search.svg" alt="search">
+                  <img class="menu__img" src="images/search.svg" alt="search">
                   Поиск
                 </a>
               </li>
               <li class="menu__item">
                 <a href="#!" class="menu__link menu-1">
-                  <img class="menu__img" src="../images/unlock.svg" alt="unlock">
+                  <img class="menu__img" src="images/unlock.svg" alt="unlock">
                   Личный кабинет
                 </a>
               </li>
