--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -4,7 +4,7 @@
 
       <div class="footer__top">
         <a class="footer__logo" href="#!">
-          <img class="footer__logo-img" src="../images/logo.svg" alt="logo">
+          <img class="footer__logo-img" src="images/logo.svg" alt="logo">
         </a>
 
         <div class="footer__top-body">
@@ -23,7 +23,7 @@
             </li>
             <li class="footer__top-item">
               <a class="footer__top-link menu-1" href="#!">
-                <img class="footer__top-img" src="../images/unlock.svg" alt="unlock">
+                <img class="footer__top-img" src="images/unlock.svg" alt="unlock">
                 Личный кабинет
               </a>
             </li>
@@ -131,20 +131,20 @@
         </div>
         <div class="footer__social">
           <a class="footer__social-link" href="#!">
-            <img class="footer__social-img" src="../images/vk.svg" alt="vk">
+            <img class="footer__social-img" src="images/vk.svg" alt="vk">
           </a>
           <a class="footer__social-link" href="#!">
-            <img class="footer__social-img" src="../images/youtube.svg" alt="youtube">
+            <img class="footer__social-img" src="images/youtube.svg" alt="youtube">
           </a>
           <span></span>
           <a class="footer__social-link" href="#!">
-            <img class="footer__social-img" src="../images/Viber.svg" alt="viber">
+            <img class="footer__social-img" src="images/Viber.svg" alt="viber">
           </a>
           <a class="footer__social-link" href="#!">
-            <img class="footer__social-img" src="../images/whatsapp.svg" alt="whatsapp">
+            <img class="footer__social-img" src="images/whatsapp.svg" alt="whatsapp">
           </a>
           <a class="footer__social-link" href="#!">
-            <img class="footer__social-img" src="../images/telegram.svg" alt="telegram">
+            <img class="footer__social-img" src="images/telegram.svg" alt="telegram">
           </a>
         </div>
       </div>
@@ -161,7 +161,7 @@
         <div class="copyright__item">
           <h6 class="small">Создание и продвижение</h6>
           <a class="copyright__link" href="#!">
-            <img class="copyright__img" src="../images/family.svg" alt="Family">
+            <img class="copyright__img" src="images/family.svg" alt="Family">
           </a>
         </div>
       </div>
@@ -170,8 +170,9 @@
 </footer>
 </div>
 
-<script src="../libs/jquery-3.7.0.js"></script>
-<script src="../libs/slick.min.js"></script>
+<script src="libs/jquery-3.7.0.js"></script>
+<script src="libs/noUiSlider/nouislider.min.js"></script>
+<script src="libs/slick/slick.min.js"></script>
 <script defer src="js/main.js"></script>
 </body>
 
