--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -3,11 +3,12 @@
 
   &__inner {
     padding: 0 60px;
+    width: 100%;
+    height: auto;
     min-height: 570px;
     border-radius: 30px;
-    background-position: center;
+    background-position: center left;
     background-repeat: no-repeat;
-    background-size: cover;
     filter: drop-shadow(0px 0px 50px rgba(206, 216, 206, 0.20));
   }
 
@@ -15,33 +16,11 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    background-color: var(--white, #fff);
+    background-color: transparent;
     max-width: 630px;
     padding: 0 30px 30px;
     border-radius: 0 0 30px 30px;
     position: relative;
-
-    &::before {
-      content: "";
-      width: 30px;
-      height: 30px;
-      background: radial-gradient(circle at left bottom, transparent 30px, #fff 30px);
-      position: absolute;
-      top: 0px;
-      left: -30px;
-      z-index: 2;
-    }
-
-    &::after {
-      content: "";
-      width: 30px;
-      height: 30px;
-      background: radial-gradient(circle at right bottom, transparent 30px, #fff 30px);
-      position: absolute;
-      top: 0px;
-      right: -30px;
-      z-index: 2;
-    }
   }
 }
 
@@ -86,16 +65,67 @@
 
     &-item {
       padding: 40px 0 100px;
-      background: var(--bg, #F9F9F9);
     }
 
     .slick-list {
       overflow: visible;
+
+      &:active~.slick-arrow {
+        opacity: 0;
+        transition-delay: 0.1s;
+        transition: all 0.1s ease-out;
+      }
+    }
+
+    .slick-track {
+      background: var(--bg, #F9F9F9);
     }
 
     .slick-arrow {
       position: absolute;
       right: -20px;
+      top: calc(50% - 30px);
+      transform: translateY(-50%);
+      width: 70px;
+      height: 180px;
+      background: transparent;
+      opacity: 1;
+      transition: all 0.1s ease-out;
+      transition-delay: 0.3s;
+
+      svg {
+        width: 100%;
+      }
+
+      &:active {
+        opacity: 0;
+        transition-delay: 0.1s;
+        transition: all 0.1s ease-out;
+      }
+    }
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    padding-right: 100px;
+  }
+
+  &__cover {
+    position: relative;
+
+    &-img {
+      width: 1070px;
+      height: auto;
+      object-fit: cover;
+      border-radius: 30px;
+      position: relative;
+    }
+
+    &-btn {
+      position: absolute;
+      left: 0;
       top: 50%;
       transform: translateY(-50%);
       width: 70px;
@@ -125,20 +155,6 @@
         z-index: 2;
       }
     }
-  }
-
-  &__item {
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    padding-right: 100px;
-  }
-
-  &__img {
-    width: 1070px;
-    height: auto;
-    object-fit: cover;
-    border-radius: 30px;
   }
 
   &__item-body {
@@ -178,6 +194,167 @@
   &__btns {
     display: flex;
     gap: 20px;
+  }
+}
+
+.calculation {
+  color: var(--white, #fff);
+  background: var(--black, #2E2D2D);
+  position: relative;
+  max-height: 816px;
+
+  .decor {
+    width: 690px;
+    height: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    bottom: -50px;
+    right: 0;
+    z-index: 1;
+  }
+
+  &__inner {
+    padding-top: 100px;
+    position: relative;
+    z-index: 2;
+  }
+
+  &__title {
+    margin-bottom: 10px;
+  }
+
+  &__suptitle {
+    margin-bottom: 40px;
+  }
+
+  &__img {
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  &__body {
+    display: flex;
+    gap: 30px;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 50%;
+    background: var(--white, #fff);
+    border-radius: 30px;
+    padding: 40px;
+    color: var(--black, #2E2D2D);
+
+    &-head {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+
+  &__tab {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+
+    &-item {
+      width: 25%;
+      padding: 20px 0 15px;
+      border-radius: 8px 8px 0px 0px;
+      background: var(--grey2, #EFEFEF);
+      text-align: center;
+
+      &.tab__active {
+        background: var(--black, #2E2D2D);
+        color: var(--white, #fff);
+      }
+    }
+  }
+
+  &__desc {
+    border-radius: 0px 0px 8px 8px;
+    background: var(--black, #2E2D2D);
+
+    &-items {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      padding: 20px 20px 30px;
+    }
+
+    .line {
+      background: var(--brown2, #353434);
+    }
+
+    &-item {
+      display: flex;
+      justify-content: space-between;
+      color: var(--grey, #A7A7A7);
+    }
+
+    &-value {
+      color: var(--white, #fff);
+    }
+  }
+
+  &__gift {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 20px;
+    color: var(--white, #fff);
+    border-top: 1px dashed var(--grey, #A7A7A7);
+    position: relative;
+
+    &-icon {
+      width: 30px;
+      height: 30px;
+      object-fit: cover;
+    }
+  }
+
+  &__calc {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    &-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 60px;
+      color: var(--grey, #A7A7A7);
+
+      input {
+        color: var(--black, #2E2D2D);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 140%;
+        width: 24px;
+      }
+
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
+
+    &-value {
+      display: flex;
+      padding: 16px 20px;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+      width: 100px;
+      border-radius: 8px;
+      border: 1px solid var(--grey2, #EFEFEF);
+    }
   }
 }
 
