add sprites & last blocks

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -130,20 +130,20 @@
           </a>
         </div>
         <div class="footer__social">
-          <a class="footer__social-link" href="#!">
+          <a class="footer__social-link" href="https://vk.com/dsk_vira">
             <img class="footer__social-img" src="images/vk.svg" alt="vk">
           </a>
-          <a class="footer__social-link" href="#!">
+          <a class="footer__social-link" href="https://youtube.com/@dsk-vira2995">
             <img class="footer__social-img" src="images/youtube.svg" alt="youtube">
           </a>
           <span></span>
-          <a class="footer__social-link" href="#!">
+          <a class="footer__social-link" href="viber://chat?number=89165562526">
             <img class="footer__social-img" src="images/Viber.svg" alt="viber">
           </a>
-          <a class="footer__social-link" href="#!">
+          <a class="footer__social-link" href="https://wa.me/89165562526">
             <img class="footer__social-img" src="images/whatsapp.svg" alt="whatsapp">
           </a>
-          <a class="footer__social-link" href="#!">
+          <a class="footer__social-link" href="https://t.me/89165562526">
             <img class="footer__social-img" src="images/telegram.svg" alt="telegram">
           </a>
         </div>
