--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -61,7 +61,12 @@
   }
 
   &__slider {
-    margin-left: -500px;
+    display: none;
+    margin-left: -600px;
+
+    &.active {
+      display: block;
+    }
 
     &-item {
       padding: 40px 0 100px;
@@ -103,13 +108,16 @@
         transition: all 0.1s ease-out;
       }
     }
+
+    .slick-slide {
+      margin: 0 100px 0 0;
+    }
   }
 
   &__item {
     display: flex;
     align-items: center;
     gap: 50px;
-    padding-right: 100px;
   }
 
   &__cover {
@@ -117,7 +125,7 @@
 
     &-img {
       width: 1070px;
-      height: auto;
+      height: 570px;
       object-fit: cover;
       border-radius: 30px;
       position: relative;
@@ -206,10 +214,8 @@
   margin-bottom: 342px;
 
   .decor {
-    width: 690px;
+    width: 33%;
     height: 50px;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: absolute;
     bottom: -50px;
     right: 0;
@@ -251,19 +257,22 @@
     border-radius: 30px;
     overflow: hidden;
 
-    &-body {
+    &-block {
       display: flex;
       flex-direction: column;
       gap: 30px;
-
       padding: 40px;
       color: var(--black, #2E2D2D);
+    }
 
-      &-head {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
+    &-head {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &-item {
+      margin-bottom: 30px;
     }
   }
 
@@ -426,8 +435,7 @@
 
     &:last-child {
       gap: 20px;
-      padding: 60px 60px 60px 100px;
-      background-color: var(--brown, #857067);
+      padding: 60px 60px 60px 124px;
       position: relative;
     }
 
@@ -553,6 +561,10 @@
         right: 62px;
       }
     }
+
+    &-item:last-child .stages__item-line {
+      display: none;
+    }
   }
 
   &__item {
@@ -584,15 +596,13 @@
       z-index: 2;
     }
 
-    &::after {
+    &-line {
       content: "";
       width: calc(100% - 44px);
       height: 8px;
       position: absolute;
       top: 91px;
       left: 38px;
-      background-image: url(images/slider-line.svg);
-      background-repeat: no-repeat;
     }
 
     &-num {
@@ -746,6 +756,11 @@
   }
 
   &__slider {
+
+    &-item {
+      margin: 0 15px;
+    }
+
     .slick-arrow {
       position: absolute;
       top: -92px;
@@ -760,11 +775,16 @@
         right: 62px;
       }
     }
+
+    .slick-list {
+      border-radius: 30px 30px 30px 0;
+      overflow: hidden;
+      margin: 0 -15px;
+    }
   }
 
   &__item {
     position: relative;
-    border-radius: 30px 30px 30px 0;
     height: 500px;
 
     &-img {
@@ -826,9 +846,18 @@
 }
 
 .payment {
-  padding: 100px 0;
+  margin-top: 200px;
+  padding: 0 0 100px;
   background: var(--bg, #F9F9F9);
   position: relative;
+
+  .decor {
+    width: 66%;
+    height: 100px;
+    position: absolute;
+    top: -100px;
+    left: 0;
+  }
 
   &__inner {}
 
@@ -928,6 +957,280 @@
         color: var(--grey, #A7A7A7);
         margin-bottom: 0;
       }
+    }
+  }
+}
+
+.blog {
+  background: var(--black, #2E2D2D);
+  position: relative;
+  max-height: 750px;
+  margin: 200px 0 162px;
+
+  .decor {
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 50%;
+    height: 100px;
+  }
+
+  &__inner {}
+
+  &__head {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 40px;
+    max-width: 770px;
+  }
+
+  &__title {
+    color: var(--white, #fff);
+  }
+
+  &__suptitle {
+    color: var(--grey, #A7A7A7);
+  }
+
+  &__content {
+    display: flex;
+  }
+
+  &__video {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    max-width: 800px;
+    width: 100%;
+
+    iframe {
+      max-width: 770px;
+      width: 100%;
+      max-height: 470px;
+      margin-right: 30px;
+      border-radius: 30px;
+      overflow: hidden;
+    }
+
+    &-about {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 30px;
+      border-radius: 30px 0 0 30px;
+      background: var(--bg, #F9F9F9);
+      position: relative;
+
+      &::before {
+        content: "";
+        width: 30px;
+        height: 30px;
+        background: radial-gradient(circle at left top, transparent 30px, var(--bg, #F9F9F9) 30px);
+        position: absolute;
+        top: -30px;
+        right: 0;
+        z-index: 2;
+      }
+    }
+
+    &-date {
+      color: var(--brown, #857067);
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 370px;
+    width: 100%;
+    padding: 40px;
+    margin-top: auto;
+    border-radius: 30px 30px 30px 0;
+    background: var(--bg, #F9F9F9);
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    &:not(:last-child) {
+      padding-bottom: 20px;
+      border-bottom: 1px solid #fff;
+    }
+
+    &-date {
+      color: var(--brown, #857067);
+    }
+
+    &-link {
+      color: var(--black, #2E2D2D);
+    }
+
+    &-name {
+      font-weight: 500;
+    }
+  }
+
+}
+
+.callback {
+  margin-bottom: 100px;
+  color: var(--white, #fff);
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 60px;
+    border-radius: 30px;
+    background: var(--black, #2E2D2D);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  &__suptitle {
+    color: var(--grey, #A7A7A7);
+  }
+
+  &__form {
+    display: flex;
+    gap: 20px;
+  }
+
+  &__input {
+    padding: 16px 24px 17px;
+    border-radius: 8px;
+    background: var(--white, #fff);
+
+    &::placeholder {
+      color: var(--grey, #A7A7A7);
+    }
+  }
+
+  &__img {
+    position: absolute;
+    top: -43px;
+    right: 30px;
+    z-index: 2;
+    width: 333px;
+    height: auto;
+    object-fit: cover;
+  }
+}
+
+.faq {
+  margin-bottom: 100px;
+
+  &__inner {}
+
+  &__head {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 40px;
+  }
+
+  &__suptitle {
+    color: var(--grey, #A7A7A7);
+  }
+
+  &__content {
+    display: flex;
+    gap: 30px;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    border-radius: 30px;
+    overflow: hidden;
+    max-width: 770px;
+  }
+
+  &__item {
+
+    &-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
+      padding: 30px;
+      background: var(--bg, #F9F9F9);
+      transition: all 0.2s ease-out;
+    }
+
+    &-title {
+      font-weight: 500;
+    }
+
+    &-arrow {
+      width: 12px;
+      height: 8px;
+      object-fit: cover;
+      stroke: var(--grey, #A7A7A7);
+      stroke-width: 2px;
+    }
+
+    &-body {
+      max-height: 0;
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    &-text {
+      padding: 30px 60px 30px;
+    }
+
+    &.faq__item-active {
+
+      .faq__item-head {
+        background: var(--brown, #857067);
+        color: var(--white, #fff);
+        transition: all 0.2s ease-out;
+      }
+
+      .faq__item-arrow {
+        stroke: var(--white, #fff);
+        transform: rotate(180deg);
+      }
+
+      .faq__item-body {
+        max-height: 100%;
+        opacity: 1;
+        pointer-events: all;
+        transition: all 0.2s ease-out;
+      }
+    }
+  }
+
+  .ask-question {
+    border-radius: 30px;
+    padding: 60px;
+    background: var(--black, #2E2D2D);
+    max-width: 370px;
+    width: 100%;
+    height: fit-content;
+
+    &__title {
+      color: var(--white, #fff);
+      margin-bottom: 20px;
+    }
+
+    &__text {
+      color: var(--grey, #A7A7A7);
+      margin-bottom: 40px;
     }
   }
 }
